--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,7 +8,7 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Corridas Appp</title>
+    <title>Corridas App!</title>
 </head>
 <body>
 <div  align="center">
