--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,7 +14,7 @@
 <div  align="center">
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-            <h1 class="display-4">Corridas App</h1>
+            <h1 class="display-4">Corridas App!</h1>
             <p class="lead">Este é o seu aplicativo de cadastro de corridas.</p>
         </div>
     </div>
